# shopifyInventoryManager

./: README.md  main (old).py  main.ipynb  main.py  prophet_ready_df.csv  pyproject.toml  thinking.md
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
configs/: settings.toml
forecasting/: __init__.py  prophet_model.py  utilities.py
shopify_api/: client.py  inventory.py  my_shopify_client.py  product_details.py  sales.py
tests/: test_inventory.py  test_sales_forecasting.py
