[tool.poetry]
name = "shopify-api_inventory_manager"
version = "0.2.0"
description = "A project description here."
authors = ["Craig Van <mail@craigvan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
prophet = "^1.0"
numpy = "^1.19.2"
matplotlib = "^3.3.4"
plotly = "^4.14.3"
shopifyapi = "^12.4.0"
django-mozilla-product-details = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"